# numkt

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
src/main/kotlin/: Main.kt  packageinfo.kt
src/main/kotlin/api/: Constructors.kt  CreateAlignedNDArray.kt  Engine.kt  EngineFactory.kt  Numkt.kt  PrimitiveArrays.kt  Random.kt
src/main/kotlin/api/io/: Csv.kt  Io.kt  Npy.kt
src/main/kotlin/api/linalg/: Dot.kt  Eigvals.kt  Inverse.kt  LinAlg.kt  LinAlgEx.kt  LinalgExtension.kt  Norm.kt  NormExtension.kt  Plu.kt  Qr.kt  Solve.kt  Svd.kt
src/main/kotlin/api/math/: Cos.kt  Exp.kt  Log.kt  Math.kt  MathEx.kt  MathExtension.kt  Pow.kt  Sin.kt
src/main/kotlin/api/stat/: Statistics.kt
src/main/kotlin/default/: DefaultEngine.kt  DefaultEngineFactory.kt
src/main/kotlin/default/linalg/: DefaultLinAlg.kt  DefaultLinAlgEx.kt
src/main/kotlin/default/math/: DefaultMath.kt  DefaultMathEx.kt
src/main/kotlin/default/stat/: DefaultStatistics.kt
src/main/kotlin/kotlin/: KEEngine.kt
src/main/kotlin/kotlin/linalg/: Dot.kt  Eigen.kt  GramShmidt.kt  KELinAlg.kt  LinAlgEx.kt  Norm.kt  PluDecomposition.kt  QrFactorization.kt  Solve.kt  Utils.kt  dot.kt  eigen.kt  gramShmidt.kt  hessenbergForm.kt  norm.kt  pluDecomposition.kt  qrFactorization.kt  solve.kt
src/main/kotlin/kotlin/math/: KEMath.kt  KEMathEx.kt
src/main/kotlin/kotlin/stat/: KEStatistics.kt
src/main/kotlin/native/: JvmNativeEngine.kt  Loader.kt  NativeEngine.kt
src/main/kotlin/native/jni/: CMakeLists.txt
src/main/kotlin/native/jni/src/: complex_double.cpp  complex_double.h  jni_linalg.cpp  jni_linalg.h  jni_math.cpp  jni_math.h  jni_stat.cpp  jni_stat.h  numkt_linalg.cpp  numkt_linalg.h  numkt_math.cpp  numkt_math.h  numkt_stat.cpp  numkt_stat.h
src/main/kotlin/native/linalg/: JniLinAlg.kt  NativeLinAlg.kt  NativeLinAlgEx.kt
src/main/kotlin/native/math/: JniMath.kt  NativeMath.kt  NativeMathEx.kt
src/main/kotlin/native/stat/: JniStat.kt  NativeStatistics.kt
src/main/kotlin/ndarray/complex/: Complex.kt  ComplexArrayIterators.kt  ComplexArrays.kt  ComplexArraysExtension.kt  ComplexDouble.kt  ComplexExtension.kt  ComplexFloat.kt  Iterators.kt  NDArrayExtension.kt
src/main/kotlin/ndarray/data/: DataType.kt  Dimensions.kt  Internals.kt  MemoryView.kt  MultiArray.kt  MultiArrays.kt  MultiIndexProgression.kt  MutableMultiArrays.kt  NDArray.kt  NDArrayIterator.kt  ScalarsGettersAndSetters.kt  Slice.kt  ViewGettersAndSetters.kt
src/main/kotlin/ndarray/operations/: Arithmetic.kt  ArithmeticNDArray.kt  Inplace.kt  IteratingNDArray.kt  Transformation.kt
src/main/resources/lib/macosArm64/: libnumkt_jni-macosArm64.dylib
src/test/kotlin/: packageinfo.kt
src/test/kotlin/native/: DataStructure.kt  MathTestUtils.kt
src/test/kotlin/npy/: DictParserTest.kt  NpzFileTest.kt  TestSupport.kt
src/test/kotlin/numkt/: TestExtension.kt
(+48 files in other folders)
